# knoty

./: Knots.ipynb  LICENSE  bezier.py  readme.MD  requirements.txt  setup.cfg  vignette.ipynb
interactive_knots/: trefoil.html
knoty/: __init__.py  analyse_knot.py  basic_knot_functions.py  export_to_stl.py  knot_eq.py  legacy.py  svg_knot_functions.py
