[metadata]
name = knoty
version = 0.1.0
author = Viktor Stein
author_email = stanislaussteinvk@gmail.com
description = The goal of this Python Module is to provide an interactive framework for the visualization of Legendre knots. It generates interactive 3D plots of Legendre knots and contact structures. Visit https://www.stani-stein.com/knoty for an interactive demonstration and the documentation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://stani-stein.com/knoty
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.15.0
    sympy>=1.4.0
    k3d>=2.10.0
    svgpathtools>=1.4.0

[options.extras_require]
optional =

